# SatRot

./: .gitignore  .gitignore.save  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Satellite Rotator Diagram.drawio  bookmarks_11_03_2020.html  run.sh
Documents/: README.md
Electronics and Electrical/: README.md  comonents2(AutoRecovered).xlsx
Mechanical/: README.md
Software/: Doxyfile  README.md
Software/SatRot/ApiTest/: CMakeLists.txt  tst_apitestcase.cpp
Telecom/: README.md  palette data.txt  report.pptx
docs/: Build_2GUI-Main_2moc__api_8cpp.html  Build_2GUI-Main_2moc__api_8cpp.js  Build_2GUI-Main_2moc__api_8cpp__incl.map  Build_2GUI-Main_2moc__api_8cpp_source.html  Build_2GUI-Main_2moc__httpwindow_8cpp.html  Build_2GUI-Main_2moc__httpwindow_8cpp.js  Build_2GUI-Main_2moc__httpwindow_8cpp_source.html  Build_2GUI-Main_2moc__mainwindow_8cpp.html  Build_2GUI-Main_2moc__mainwindow_8cpp.js  Build_2GUI-Main_2moc__mainwindow_8cpp__incl.map  Build_2GUI-Main_2moc__mainwindow_8cpp__incl.md5  Build_2GUI-Main_2moc__mainwindow_8cpp_source.html  Build_2GUI-Main_2moc__manualscribble_8cpp.html  Build_2GUI-Main_2moc__manualscribble_8cpp.js  Build_2GUI-Main_2moc__manualscribble_8cpp_source.html  Build_2GUI-Main_2moc__positionmodel_8cpp.html  Build_2GUI-Main_2moc__positionmodel_8cpp.js  Build_2GUI-Main_2moc__positionmodel_8cpp_source.html  Build_2GUI-Main_2moc__predefs_8h.html  Build_2GUI-Main_2moc__predefs_8h.js  Build_2GUI-Main_2moc__predefs_8h_source.html  Build_2GUI-Main_2moc__radiopassmodel_8cpp.html  (+1548 more)
includes/: mainwindow.h
(+907 files in other folders)
